# sofl-eco

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: publish-to-auto-release.yml
sofl-editor/: .gitignore  modern.config.ts  package.json
sofl-editor/src/: api.ts  builtins.ts  event.ts  state.ts  templates.ts  types.ts
sofl-editor/src-tauri/: Cargo.toml  tauri.conf.json
sofl-editor/src-tauri/src/: main.rs
sofl-editor/src/components/: panel.tsx  predefine-button.tsx
sofl-editor/src/components/editor/: extensions.ts  index.tsx
sofl-editor/src/routes/: index.css  layout.tsx  page.tsx
sofl-type-checker/: Cargo.toml
sofl-type-checker/src/: context.rs  diagnostic.rs  lib.rs  symbol_manager.rs  type_manager.rs  type_node.rs  types.rs  utils.rs
sofl-type-checker/src/context/: diagnostic.rs  mod.rs  symbol_manager.rs  type_manager.rs
sofl-type-checker/src/lang_type/: function.rs  mod.rs
tree-sitter-sofl/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-sofl/bindings/c/: tree-sitter-sofl.pc.in
tree-sitter-sofl/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-sofl/bindings/node/: binding.cc
tree-sitter-sofl/bindings/python/tree_sitter_sofl/: __init__.py  binding.c
tree-sitter-sofl/bindings/rust/: build.rs  lib.rs
tree-sitter-sofl/src/: grammar.json  node-types.json  parser.c
tree-sitter-sofl/test/corpus/: call.txt  exp.txt  function.txt  module.txt  process.txt  ref.txt  showcase.txt
(+1 files in other folders)
