[package]
name = "sofl-type-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-sofl = { path = "../tree-sitter-sofl" }
tree-sitter = { workspace = true }
anyhow = "1.0.82"
thiserror = "1.0.58"
itertools = "0.12.1"
